# documentdf

./: .gitignore  Cargo.toml  output
code2chunks/: Cargo.toml
code2chunks/src/: code_chunker.rs  json_chunks.rs  main.rs
core/: Cargo.toml
core/src/: code_chunk.rs  lib.rs  load_chunks.rs
criterion1.rs/: lib.rs
doc/: source.json
src/: .#ripgrep_lines.rs  bot_connect.rs  code_chunk.rs  code_chunker.rs  json_chunks.rs  main.rs  ripgrep_lines.rs  toml_chunks.rs
warp_test/: Cargo.toml
warp_test/src/: main.rs  server.rs
