[package]
name = "documentdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
walkdir = "2"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

thirtyfour = "0.32.0-rc.8"
tokio = { version = "1", features = ["full"] }
